# substrate

client/consensus/epochs/: Cargo.toml
client/consensus/manual-seal/: Cargo.toml
client/rpc-api/: Cargo.toml
frame/aura/: Cargo.toml
frame/authorship/: Cargo.toml
frame/babe/: Cargo.toml
frame/executive/: Cargo.toml
frame/identity/src/: lib.rs
frame/im-online/src/: lib.rs
frame/session/: Cargo.toml
frame/society/: Cargo.toml
frame/staking/: Cargo.toml
frame/support/: Cargo.toml
frame/support/test/: Cargo.toml
frame/system/: Cargo.toml
primitives/consensus/common/: Cargo.toml
test-utils/runtime/: Cargo.toml
utils/browser/: Cargo.toml
utils/grafana-data-source/test/: Cargo.toml
