[package]
name = "sc-consensus-manual-seal"
version = "0.8.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Manual sealing engine for Substrate"
edition = "2018"
license = "GPL-3.0"

[dependencies]
derive_more = "0.99.2"
futures = "0.3.1"
jsonrpc-core = "14.0.5"
jsonrpc-core-client = "14.0.5"
jsonrpc-derive = "14.0.5"
log = "0.4.8"
parking_lot = "0.10.0"
serde = { version = "1.0", features=["derive"] }

sc-client = { version = "0.8.0", path = "../../../client" }
sc-client-api = { version = "2.0.0", path = "../../../client/api" }
sc-transaction-pool = { version = "2.0.0", path = "../../transaction-pool" }
sp-blockchain = { version = "2.0.0", path = "../../../primitives/blockchain" }
sp-consensus = { version = "0.8", package = "sp-consensus", path = "../../../primitives/consensus/common" }
sp-inherents = { version = "2.0.0", path = "../../../primitives/inherents" }
sp-runtime = { version = "2.0.0",  path = "../../../primitives/runtime" }
sp-transaction-pool = { version = "2.0.0", path = "../../../primitives/transaction-pool" }

[dev-dependencies]
sc-basic-authorship = { version = "0.8.0", path = "../../basic-authorship" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../../test-utils/runtime/client" }
substrate-test-runtime-transaction-pool = { version = "2.0.0", path = "../../../test-utils/runtime/transaction-pool" }
tokio = { version = "0.2", features = ["rt-core", "macros"] }
env_logger = "0.7.0"
tempfile = "3.1.0"
